force-app/main/default/objects/OpportunityLineItem/fields/Bundle_SKU__c.field-meta.xml
<CustomField>
    <fullName>Bundle_SKU__c</fullName>
    <formula>IF(ISBLANK( SBQQ__QuoteLine__r.SBQQ__ProductOption__r.SBQQ__ConfiguredSKU__r.Name  ),SBQQ__QuoteLine__r.SBQQ__Product__r.Name, 
SBQQ__QuoteLine__r.SBQQ__ProductOption__r.SBQQ__ConfiguredSKU__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle SKU</label>
    <type>Text</type>
</CustomField>