force-app/main/default/objects/OpportunityLineItem/fields/Clio_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Clio_Quantity__c</fullName>
    <description>Field used to reflect the proper quantity of Blocked Price product: https://help.salesforce.com/articleView?id=cpq_effective_quantity.htm&amp;type=5</description>
    <formula>SBQQ__QuoteLine__r.SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>