force-app/main/default/objects/OpportunityLineItem/fields/Count_Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Count_Opportunity_Product__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Opportunity Product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>