force-app/main/default/objects/OpportunityLineItem/fields/List_ACV__c.field-meta.xml
<CustomField>
    <fullName>List_ACV__c</fullName>
    <label>List ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>