force-app/main/default/objects/OpportunityLineItem/fields/Partner_ACV__c.field-meta.xml
<CustomField>
    <fullName>Partner_ACV__c</fullName>
    <formula>SBQQ__QuoteLine__r.Partner_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>