force-app/main/default/objects/OpportunityLineItem/fields/Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle__c</fullName>
    <description>Twin field from Product via QL</description>
    <label>Product Bundle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Individual_Product</fullName>
                <label>Individual Product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>