force-app/main/default/objects/OpportunityLineItem/fields/Product_Option_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Option_Name__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__ProductOption__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Option Name</label>
    <type>Text</type>
</CustomField>