force-app/main/default/objects/OpportunityLineItem/fields/Prorate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Prorate_Multiplier__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__ProrateMultiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prorate Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>