force-app/main/default/objects/OpportunityLineItem/fields/Quote_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_ID__c</fullName>
    <formula>SBQQ__QuoteLine__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Line ID</label>
    <type>Text</type>
</CustomField>