force-app/main/default/objects/OpportunityLineItem/fields/Renewed_Subscription_OP__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Subscription_OP__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__RenewedSubscription__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewed Subscription</label>
    <type>Text</type>
</CustomField>