force-app/main/default/objects/OpportunityLineItem/fields/Renewed_Subscription_WF__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Subscription_WF__c</fullName>
    <label>Renewed Subscription WF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>