force-app/main/default/objects/OpportunityLineItem/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <formula>TEXT (SBQQ__QuoteLine__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Type</label>
    <type>Text</type>
</CustomField>