force-app/main/default/objects/OpportunityLineItem/fields/Sales_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type_Code__c</fullName>
    <description>Based on Process Builder that combines Opportunity values with Quote Line values</description>
    <label>Sales Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SALE-NEW</fullName>
            </value>
            <value>
                <fullName>SALE-UPSELL</fullName>
            </value>
            <value>
                <fullName>SALE-RESALE</fullName>
            </value>
            <value>
                <fullName>SALE-REBILL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>