force-app/main/default/objects/OpportunityLineItem/fields/Subscription_Length_Months__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Length_Months__c</fullName>
    <formula>Prorate_Multiplier__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Length (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>