force-app/main/default/objects/OpportunityLineItem/fields/Xactly_Opp_Product_Id_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Opp_Product_Id_Account_Manager__c</fullName>
    <description>Xactly Unique Product Id for Account Managers</description>
    <formula>Opportunity.OwnerId &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Xactly Unique Product Id for Account Managers</inlineHelpText>
    <label>Opp Product Id - Account Manager</label>
    <type>Text</type>
</CustomField>