force-app/main/default/objects/OpportunityLineItem/fields/Xactly_Opp_Product_Id_Inside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Opp_Product_Id_Inside_Sales__c</fullName>
    <description>Xactly Unique Product Id for Inside Sales</description>
    <formula>Id &amp;  Opportunity.Xactly_Inside_Sales_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Xactly Unique Product Id for Inside Sales</inlineHelpText>
    <label>Opp Product Id - Inside Sales</label>
    <type>Text</type>
</CustomField>