force-app/main/default/objects/OpportunityLineItem/fields/Xactly_Partner_ACV_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Partner_ACV_Account_Manager__c</fullName>
    <description>Xactly - ACV commission calculation for Account Managers</description>
    <formula>Partner_ACV__c *  Opportunity.Xactly_Split_Percent_Account_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ACV commission calculation for Account Managers</inlineHelpText>
    <label>Partner ACV - Account Manager</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>