force-app/main/default/objects/OpportunityLineItem/fields/Xactly_Partner_ACV_Inside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Partner_ACV_Inside_Sales__c</fullName>
    <description>Xactly - ACV commission calculation for Inside Sales</description>
    <formula>Partner_ACV__c *  Opportunity.Xactly_Split_Percent_Inside_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Xactly - ACV commission calculation for Inside Sales</inlineHelpText>
    <label>Partner ACV - Inside Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>